--- a/mobile/index.html
+++ b/mobile/index.html
@@ -170,7 +170,7 @@
 <div id="info">
 <svg width="300" height="100" style="float: left;">
 <div id="trfjms">
-<img src="img/trfjmsimg.png" id="tji" />
+<img src="img/trfjmsimg.PNG" id="tji" />
 <h2 class="font" id="trjtext">Пробки</h2>
 <h3 class="font">4 балла</h3>
 </div>
