--- a/credits/index.html
+++ b/credits/index.html
@@ -14,5 +14,5 @@ Google Chrome (Google, google.com)<br />
 Файлы (CyanogenMod, сейчас LineageOS, lineageos.org)<br />
 Калькулятор (Google, google.com) <br />
 
-Автор проекта: FatlessComb1168 для l-lacker.ru.<br />
+Автор проекта: FatlessComb1168 для l-lacker.ru в 2018 году.<br />
 Проект создан на некоммерческой основе.<br />
